Added new module IpFilter