@@ -1,9 +1,8 @@
 package xyz.lychee.gatekeeper.shared.modules;
 
 import xyz.lychee.gatekeeper.shared.Gatekeeper;
-import xyz.lychee.gatekeeper.shared.manager.GeoipManager;
 import xyz.lychee.gatekeeper.shared.objects.AbstractModule;
-import xyz.lychee.gatekeeper.shared.util.RandomUtil;
+import xyz.lychee.gatekeeper.shared.util.AddressUtils;
 
 import java.io.IOException;
 import java.net.InetAddress;
@@ -15,37 +14,36 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Duration;
-import java.util.HashSet;
-import java.util.Set;
+import java.util.*;
 import java.util.concurrent.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-public class AsnFilterModule extends AbstractModule implements Runnable {
+public class IpFilterModule extends AbstractModule implements Runnable {
     private final ScheduledExecutorService executor = Executors.newSingleThreadScheduledExecutor();
-    private final Set<Integer> downloadedAsn = ConcurrentHashMap.newKeySet();
-    private final Set<Integer> listedAsn = new HashSet<>();
-    private final Set<String> sources = new HashSet<>();
-    private final Path asnPath;
+    private final Set<Integer> downloadedIps = ConcurrentHashMap.newKeySet();
+    private final Set<Integer> listedIps = new HashSet<>();
+    private final List<String> sources = new ArrayList<>();
+    private final Path ipsPath;
     private final HttpClient httpClient = HttpClient.newBuilder()
             .connectTimeout(Duration.ofSeconds(10))
             .followRedirects(HttpClient.Redirect.NORMAL)
+            .executor(this.executor)
             .build();
     private Pattern pattern;
     private ScheduledFuture<?> task;
     private long interval;
     private boolean list_mode;
 
-    public AsnFilterModule(Gatekeeper<?> gatekeeper) {
-        super(gatekeeper, "AsnFilter");
+    public IpFilterModule(Gatekeeper<?> gatekeeper) {
+        super(gatekeeper, "IpFilter");
 
-        this.asnPath = this.getGatekeeper().dataFolder().toPath().resolve("asn.txt");
+        this.ipsPath = this.getGatekeeper().dataFolder().toPath().resolve("ips.txt");
     }
 
     @Override
     public boolean handlePreLogin(InetAddress address, String name, int dataAddress) {
-        int asn = GeoipManager.INSTANCE.getAsnCode(dataAddress);
-        return asn > 0 && (this.downloadedAsn.contains(asn) || this.listedAsn.contains(asn) == this.list_mode);
+        return this.downloadedIps.contains(dataAddress) || this.listedIps.contains(dataAddress) == this.list_mode;
     }
 
     @Override
@@ -60,29 +58,30 @@ public class AsnFilterModule extends AbstractModule implements Runnable {
 
     @Override
     public boolean load() throws IOException {
-        this.downloadedAsn.clear();
-        this.listedAsn.clear();
+        this.downloadedIps.clear();
+        this.listedIps.clear();
         this.sources.clear();
 
         if (this.task != null) {
             this.task.cancel(true);
         }
 
-        if (Files.exists(this.asnPath)) {
-            Files.readAllLines(this.asnPath).forEach(line -> {
-                if (RandomUtil.isInteger(line)) {
-                    this.downloadedAsn.add(Integer.parseInt(line));
-                }
-            });
+        if (Files.exists(this.ipsPath)) {
+            Files.readAllLines(this.ipsPath).forEach(line ->
+                    this.downloadedIps.add(Integer.parseInt(line))
+            );
         }
-
 
         this.interval = this.getConfig().getInt("auto_update.interval") * 60L * 60L;
         this.pattern = Pattern.compile(this.getConfig().getString("auto_update.asn_pattern"));
         this.sources.addAll(this.getConfig().getStringList("auto_update.sources"));
-        this.task = this.executor.scheduleAtFixedRate(this, 10L, interval, TimeUnit.SECONDS);
+        Collections.shuffle(this.sources);
 
-        this.listedAsn.addAll(this.getConfig().getIntList("list"));
+        this.task = this.executor.scheduleAtFixedRate(this, 10L, this.interval, TimeUnit.SECONDS);
+
+        for (String address : this.getConfig().getStringList("list")) {
+            this.listedIps.add(AddressUtils.addressToInteger(address));
+        }
         this.list_mode = this.getConfig().getBoolean("list_mode");
 
         return true;
@@ -90,9 +89,9 @@ public class AsnFilterModule extends AbstractModule implements Runnable {
 
     @Override
     public void run() {
-        if (Files.exists(this.asnPath)) {
+        if (Files.exists(this.ipsPath)) {
             try {
-                long lastModified = Files.getLastModifiedTime(this.asnPath).toMillis();
+                long lastModified = Files.getLastModifiedTime(this.ipsPath).toMillis();
                 if (System.currentTimeMillis() - lastModified < this.interval * 1000L) {
                     return;
                 }
@@ -101,10 +100,7 @@ public class AsnFilterModule extends AbstractModule implements Runnable {
 
         Executor delayed = CompletableFuture.delayedExecutor(1, TimeUnit.SECONDS, this.executor);
 
-        Set<String> lines = ConcurrentHashMap.newKeySet();
-
         CompletableFuture<Void> chain = CompletableFuture.completedFuture(null);
-
         for (String source : this.sources) {
             chain = chain.thenCompose(v -> {
                 HttpRequest request = HttpRequest.newBuilder()
@@ -116,29 +112,34 @@ public class AsnFilterModule extends AbstractModule implements Runnable {
                 CompletableFuture<HttpResponse<String>> responseFuture =
                         this.httpClient.sendAsync(request, HttpResponse.BodyHandlers.ofString());
 
-                return responseFuture.thenAcceptAsync(response -> {
-                    if (response.statusCode() == 200) {
-                        Set<Integer> asns = new HashSet<>();
-                        Matcher matcher = this.pattern.matcher(response.body());
-                        while (matcher.find()) {
-                            String group = matcher.group();
-                            if (RandomUtil.isInteger(group)) {
-                                asns.add(Integer.parseInt(group));
-                                lines.add(group);
+                return responseFuture
+                        .exceptionally(t -> null)
+                        .thenAcceptAsync(response -> {
+                            if (response != null && response.statusCode() == 200) {
+                                Set<Integer> ips = new HashSet<>();
+                                Matcher matcher = this.pattern.matcher(response.body());
+                                while (matcher.find()) {
+                                    ips.add(
+                                            AddressUtils.addressToInteger(
+                                                    matcher.group()
+                                            )
+                                    );
+                                }
+                                this.downloadedIps.addAll(ips);
                             }
-                        }
-
-                        this.downloadedAsn.addAll(asns);
-                    }
-                }, delayed);
+                        }, delayed);
             });
         }
 
         chain.thenRun(() -> {
             try {
-                Files.write(this.asnPath, lines, StandardCharsets.UTF_8);
+                StringBuilder lines = new StringBuilder();
+                for (int ip : this.downloadedIps) {
+                    lines.append(ip).append('\n');
+                }
+                Files.writeString(this.ipsPath, lines, StandardCharsets.UTF_8);
             } catch (IOException ignored) {}
-            this.getGatekeeper().logger().info("Downloaded " + lines.size() + " danger asns to database!");
+            this.getGatekeeper().logger().info("Downloaded " + this.downloadedIps.size() + " proxy ips to database!");
         });
     }
 }
